--- a/1_templates/4-templates/tpl.gohtml
+++ b/1_templates/4-templates/tpl.gohtml
@@ -6,10 +6,7 @@
 </head>
 <body>
 
-<p>{{ . }}</p>
-<p>{{ fdbl . }}</p>
-<p>{{ . | fdbl | fsq }}</p>
-<p>{{ . | fdbl | fsq | fsqrt }}</p>
+<p>{{ template "article" }}</p>
 
 </body>
 </html>
